--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,9 @@
         </script>
     </head>
     <body>
+
+
+
     <div class="progress-bar">
         <div class="progress-bar-container">
             <div class="image">
@@ -117,6 +120,7 @@
     </header>
 
     <main>
+        <div id="Canvas_wrapper"></div>
         <section class="tech_spec">
             <div class="container__content">
                 <div class="tech_spec__wrapper">
