--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,10 @@
             <div class="image">
                 <img src="/src/img/layout/loader/2.svg" alt="цодд">
                 <p class="image-text">ЦОДД</p>
+<!--                <video autoplay loop>-->
+<!--                    <source src="/src/img/logo.mp4" type="video/mp4">-->
+<!--                    <source src="/src/img/logo.webm" type="video/webm">-->
+<!--                </video>-->
             </div>
             <span id="progress-label">0%</span>
             <progress id="progress-bar" value="0" max="100"></progress>
@@ -120,7 +124,6 @@
     </header>
 
     <main>
-        <div id="Canvas_wrapper"></div>
         <section class="tech_spec">
             <div class="container__content">
                 <div class="tech_spec__wrapper">
@@ -310,6 +313,8 @@
             </div>
         </div>
     </section>
+
+    <div id="Canvas_wrapper"></div>
 
     <a-scene>
         <a-assets>
