--- a/src/pages/solaris.html
+++ b/src/pages/solaris.html
@@ -234,8 +234,28 @@
             <div class="auto_park_slider">
                 <div class="auto_park_slider-overflow">
                     <div class="auto_park_slider-wrapper">
+                        <div class="gallery_item">
+                            <a class="gallery_item_link" href="../index.html">
+                                <img class="gallery_item-img" src="../img/layout/slider/slide_amarok2.png" alt="slide">
+                            </a>
+                        </div>
                         <div class="gallery_item active">
-                            <a class="gallery_item_link" href="./src/index.html">
+                            <a class="gallery_item_link" href="#">
+                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="slide">
+                            </a>
+                        </div>
+                        <div class="gallery_item">
+                            <a class="gallery_item_link" href="../pages/solaris_two.html">
+                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_2.png" alt="slide">
+                            </a>
+                        </div>
+                        <div class="gallery_item">
+                            <a class="gallery_item_link" href="../pages/bus.html">
+                                <img class="gallery_item-img" src="../img/layout/slider/slide_bus.png" alt="slide">
+                            </a>
+                        </div>
+                        <div class="gallery_item">
+                            <a class="gallery_item_link" href="../index.html">
                                 <img class="gallery_item-img" src="../img/layout/slider/slide_amarok2.png" alt="slide">
                             </a>
                         </div>
@@ -255,27 +275,7 @@
                             </a>
                         </div>
                         <div class="gallery_item">
-                            <a class="gallery_item_link" href="./src/index.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_amarok2.png" alt="slide">
-                            </a>
-                        </div>
-                        <div class="gallery_item">
-                            <a class="gallery_item_link" href="#">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="slide">
-                            </a>
-                        </div>
-                        <div class="gallery_item">
-                            <a class="gallery_item_link" href="../pages/solaris_two.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_2.png" alt="slide">
-                            </a>
-                        </div>
-                        <div class="gallery_item">
-                            <a class="gallery_item_link" href="../pages/bus.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_bus.png" alt="slide">
-                            </a>
-                        </div>
-                        <div class="gallery_item">
-                            <a class="gallery_item_link" href="./src/index.html">
+                            <a class="gallery_item_link" href="../index.html">
                                 <img class="gallery_item-img" src="../img/layout/slider/slide_amarok2.png" alt="slide">
                             </a>
                         </div>
