new page + config

--- a/src/index.html
+++ b/src/index.html
@@ -9,21 +9,47 @@
 </head>
 <body>
     <header class="header">
-    <div class="container">
-        <div class="header__wrapper">
-            <div class="header__logo">
-                <img class="header__logo-img" src="./img/layout/header_logo.svg" alt="logo">
-                <p class="header__logo-text">Гараж ЦОДД</p>
-            </div>
-            <div class="header__info">
-                <img class="header__info-img" src="./img/layout/header_img2.png" alt="model_preview">
-                <div class="header__info-descr">
-                    <p class="header__info-text">Дорожный патруль</p>
-                    <p class="header__info-text">30 автомобилей</p>
+        <div class="container">
+            <div class="header__wrapper">
+                <div class="header__logo">
+                    <img class="header__logo-img" src="./img/layout/header_logo.svg" alt="logo">
+                    <p class="header__logo-text">Гараж ЦОДД</p>
+                </div>
+                <div class="header__menu">
+                    <div class="burger-menu burger-menu--closed">
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                    </div>
                 </div>
             </div>
         </div>
+    </header>
+
+    <section class="main">
+        <div class="container">
+            <div class="main_bg">
+                <h1 class="main_title">
+                    <span>Более 20 лет ЦОДД</span> делает дор<span></span>ги Москвы <span>безопасными и удобными</span>
+                </h1>
+                <div class="main_info">
+                    <div class="main_info-descr">
+                        <p class="main_info-text">
+                            Сегодня здесь находится одна из крупнейших в мире систем управления дорожным движением с крупными инфраструктурными и ИТ-проектами
+                        </p>
+                        <p class="main_info-text">
+                            Для эффективного выполнения своих задач в ЦОДД создан автопарк, в котором представлен самый разнообразный транспорт: от брутальных пикапов до элетровелосипедов, от мобильных центров управления городом до речных катеров
+                        </p>
+                    </div>
+                    <a class="main_info-link" href="./pages/amarok.html">в виртуальный гараж</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="line">
+        <div class="container"></div>
     </div>
-</header>
+
 </body>
 </html>
