--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Гараж ЦОДД</title>
 </head>
-<body>
-    <header class="header">
-        <div class="container">
+<body class="main">
+    <header class="header_main">
+        <div class="container_main">
             <div class="header__wrapper">
                 <div class="header__logo">
                     <img class="header__logo-img" src="./img/layout/header_logo.svg" alt="logo">
@@ -27,7 +27,7 @@
     </header>
 
     <section class="main">
-        <div class="container">
+        <div class="container_main">
             <div class="main_bg">
                 <h1 class="main_title">
                     <span>Более 20 лет ЦОДД</span> делает дор<span></span>ги Москвы <span>безопасными и удобными</span>
@@ -48,7 +48,7 @@
     </section>
 
     <div class="line">
-        <div class="container"></div>
+        <div class="container_main"></div>
     </div>
 
 </body>
