--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" class="main">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -30,7 +30,7 @@
         <div class="container_main">
             <div class="main_bg">
                 <h1 class="main_title">
-                    <span>Более 20 лет ЦОДД</span> делает дор<span></span>ги Москвы <span>безопасными и удобными</span>
+                    <span>Более 20 лет ЦОДД</span> <span>делает дор<span class="large_letter"></span>ги Москвы</span> <span>безопасными и удобными</span>
                 </h1>
                 <div class="main_info">
                     <div class="main_info-descr">
@@ -50,6 +50,56 @@
     <div class="line">
         <div class="container_main"></div>
     </div>
+
+    <section class="traffic_patrol">
+        <div class="container_main">
+            <div class="traffic_patrol-wrapper">
+                <h1 class="traffic_patrol-title">дорожный патруль ЦОДД</h1>
+                <img src="./img/layout/pages/main/amarok_vector.svg" alt="Амарок рама">
+                <div class="traffic_patrol-descr">
+                    <p class="traffic_patrol-text">
+                        Ежедневно 30 экипажей Дорожного патруля ЦОДД курсирует по городу. Задача — регулировать движение сложных участков, помогать водителям при поломке или аварии.
+                    </p>
+                    <p class="traffic_patrol-text">
+                        В каждой машине есть все самое необходимое: огнетушитель, аптечка, набор инструментов, буксировочные тросы, балонный ключ, противооткатные упоры, пусковое устройство, домкрат, жезл регулировщика, гайковерт, дорожные конусы, бланки европротокола, телескопическая лестница. На пикапах дополнительно установлено дорожное табло.
+                    </p>
+                    <p class="traffic_patrol-text">
+                        В гараже Дорожного патруля 57 автомобилей: пикап, грузовой фургон, легковая машина. Все автомобили ярко-зеленого цвета с проблесковыми маячками на крыше и логотипом ЦОДД.
+                    </p>
+                    <p class="traffic_patrol-text">
+                        Экипаж дорожного патруля нельзя вызывать, но в случае серьезной аварии, Ситуационный центр ЦОДД может направить на место.
+                    </p>
+                </div>
+            </div>
+            <div class="traffic_patrol_slider-wrapper">
+                <div class="traffic_patrol_slider">
+                    <div class="traffic_patrol-slid">
+                        <div class="slid_img"></div>
+                        <div class="slid_info">
+                            <div class="slid_info-desc">
+                                <p class="slid_info-title">Дорожный патруль ЦОДД</p>
+                                <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
+                            </div>
+                            <div class="slid_info-link">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                    <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
+                                        <rect width="18" height="18" fill="#D9D9D9"/>
+                                    </mask>
+                                    <g mask="url(#mask0_1137_313)">
+                                        <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
+                                    </g>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+<!--                <div class="traffic_patrol_slider-buttons">-->
+<!--                    <button class="btn_prev"></button>-->
+<!--                    <button class="btn_next"></button>-->
+<!--                </div>-->
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
