--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
                 </div>
                 <div class="traffic_patrol_slider-wrapper">
                     <div class="traffic_patrol_slider">
-                        <div class="traffic_patrol-slid">
+                        <div class="traffic_patrol-card slid">
                             <div class="slid_img"></div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -150,6 +150,53 @@
                     <!--                    <button class="btn_prev"></button>-->
                     <!--                    <button class="btn_next"></button>-->
                     <!--                </div>-->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="situation_centre">
+        <div class="container_main">
+            <div class="situation_centre_grid-wrapper">
+                <div class="situation-1">
+                    <h1 class="situation_centre-title">мобильный ситуационный центр</h1>
+                </div>
+                <div class="brain_heart-2">
+                    <p class="brain_heart-title">Ситуационный центр ЦОДД — «мозг и сердце» Интеллектуальной транспортной системы Москвы.</p>
+                    <p class="brain_heart-text">Ситуационный центр ЦОДД — «мозг и сердце» Интеллектуальной транспортной системы Москвы. Отсюда 24/7 следят за движением на дорогах, управляют светофорами, координируют работу Дорожного патруля, собирают данные о трафике и заторах, выводят информацию на электронные табло, координируют разные службы при крупных ДТП и ЧП.</p>
+                </div>
+                <div class="major_events-3">
+                    <p class="major_events-text">Когда в городе проходят крупные мероприятия, и нужна максимальная оперативность, на месте работает мобильный Ситуационный центр. Полный аналог стационарного — только на колесах.</p>
+                </div>
+                <div class="employ-4">
+<!--                    <img src="" alt="Работник Мобильного Ситуационного центра" class="employ">-->
+                </div>
+                <div class="slider-5">
+                    <div class="traffic_patrol-card slid">
+                        <div class="slid_img"></div>
+                        <div class="slid_info">
+                            <div class="slid_info-desc">
+                                <p class="slid_info-title">Дорожный патруль ЦОДД</p>
+                                <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
+                            </div>
+                            <div class="slid_info-link">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                    <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
+                                        <rect width="18" height="18" fill="#D9D9D9"/>
+                                    </mask>
+                                    <g mask="url(#mask0_1137_313)">
+                                        <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
+                                    </g>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bus-6">
+<!--                    <img src="" alt="Ситуационный центр" class="bus">-->
+                </div>
+                <div class="man_text-7">
+                    <p class="man_text-text">Мобильный Ситцентр построен на базе автобуса MAN. В его салоне размещены рабочие места для специалистов, зал совещаний, системы связи и проч. Он полностью автономен, и может работать как во время стоянки, так и в движении.</p>
                 </div>
             </div>
         </div>
