--- a/src/index.html
+++ b/src/index.html
@@ -53,60 +53,10 @@
         <div class="container_main"></div>
     </div>
 
-<!--    <section class="traffic_patrol">-->
-<!--        <div class="container_main">-->
-<!--            <div class="traffic_patrol-wrapper">-->
-<!--                <h1 class="traffic_patrol-title">дорожный патруль ЦОДД</h1>-->
-<!--                <img src="./img/layout/pages/main/amarok_vector.svg" alt="Амарок рама">-->
-<!--                <div class="traffic_patrol-descr">-->
-<!--                    <p class="traffic_patrol-text">-->
-<!--                        Ежедневно 30 экипажей Дорожного патруля ЦОДД курсирует по городу. Задача — регулировать движение сложных участков, помогать водителям при поломке или аварии.-->
-<!--                    </p>-->
-<!--                    <p class="traffic_patrol-text">-->
-<!--                        В каждой машине есть все самое необходимое: огнетушитель, аптечка, набор инструментов, буксировочные тросы, балонный ключ, противооткатные упоры, пусковое устройство, домкрат, жезл регулировщика, гайковерт, дорожные конусы, бланки европротокола, телескопическая лестница. На пикапах дополнительно установлено дорожное табло.-->
-<!--                    </p>-->
-<!--                    <p class="traffic_patrol-text">-->
-<!--                        В гараже Дорожного патруля 57 автомобилей: пикап, грузовой фургон, легковая машина. Все автомобили ярко-зеленого цвета с проблесковыми маячками на крыше и логотипом ЦОДД.-->
-<!--                    </p>-->
-<!--                    <p class="traffic_patrol-text">-->
-<!--                        Экипаж дорожного патруля нельзя вызывать, но в случае серьезной аварии, Ситуационный центр ЦОДД может направить на место.-->
-<!--                    </p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="traffic_patrol_slider-wrapper">-->
-<!--                <div class="traffic_patrol_slider">-->
-<!--                    <div class="traffic_patrol-slid">-->
-<!--                        <div class="slid_img"></div>-->
-<!--                        <div class="slid_info">-->
-<!--                            <div class="slid_info-desc">-->
-<!--                                <p class="slid_info-title">Дорожный патруль ЦОДД</p>-->
-<!--                                <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>-->
-<!--                            </div>-->
-<!--                            <div class="slid_info-link">-->
-<!--                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">-->
-<!--                                    <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">-->
-<!--                                        <rect width="18" height="18" fill="#D9D9D9"/>-->
-<!--                                    </mask>-->
-<!--                                    <g mask="url(#mask0_1137_313)">-->
-<!--                                        <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>-->
-<!--                                    </g>-->
-<!--                                </svg>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--&lt;!&ndash;                <div class="traffic_patrol_slider-buttons">&ndash;&gt;-->
-<!--&lt;!&ndash;                    <button class="btn_prev"></button>&ndash;&gt;-->
-<!--&lt;!&ndash;                    <button class="btn_next"></button>&ndash;&gt;-->
-<!--&lt;!&ndash;                </div>&ndash;&gt;-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </section>-->
-
     <section class="traffic_patrol">
         <div class="container_main">
             <div class="traffic_patrol-wrapper">
-                <h1 class="traffic_patrol-title">дорожный патруль ЦОДД</h1>
+                <h1 class="traffic_patrol-title title">дорожный патруль ЦОДД</h1>
                 <img src="./img/layout/pages/main/amarok_vector.svg" alt="Амарок рама">
                 <div class="traffic_patrol-descr one">
                     <p class="traffic_patrol-text">
@@ -159,17 +109,18 @@
         <div class="container_main">
             <div class="situation_centre_grid-wrapper">
                 <div class="situation-1">
-                    <h1 class="situation_centre-title">мобильный ситуационный центр</h1>
+                    <h1 class="situation_centre-title title">мобильный ситуационный центр</h1>
                 </div>
                 <div class="brain_heart-2">
                     <p class="brain_heart-title">Ситуационный центр ЦОДД — «мозг и сердце» Интеллектуальной транспортной системы Москвы.</p>
                     <p class="brain_heart-text">Ситуационный центр ЦОДД — «мозг и сердце» Интеллектуальной транспортной системы Москвы. Отсюда 24/7 следят за движением на дорогах, управляют светофорами, координируют работу Дорожного патруля, собирают данные о трафике и заторах, выводят информацию на электронные табло, координируют разные службы при крупных ДТП и ЧП.</p>
+                    <img src="./img/layout/pages/main/bus_vector.svg" alt="Ситуационный центр рама">
                 </div>
                 <div class="major_events-3">
                     <p class="major_events-text">Когда в городе проходят крупные мероприятия, и нужна максимальная оперативность, на месте работает мобильный Ситуационный центр. Полный аналог стационарного — только на колесах.</p>
                 </div>
                 <div class="employ-4">
-<!--                    <img src="" alt="Работник Мобильного Ситуационного центра" class="employ">-->
+                    <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" class="employ">
                 </div>
                 <div class="slider-5">
                     <div class="traffic_patrol-card slid">
@@ -193,10 +144,119 @@
                     </div>
                 </div>
                 <div class="bus-6">
-<!--                    <img src="" alt="Ситуационный центр" class="bus">-->
+                    <img src="./img/layout/pages/main/bus.jpg" alt="Ситуационный центр" class="bus">
                 </div>
                 <div class="man_text-7">
                     <p class="man_text-text">Мобильный Ситцентр построен на базе автобуса MAN. В его салоне размещены рабочие места для специалистов, зал совещаний, системы связи и проч. Он полностью автономен, и может работать как во время стоянки, так и в движении.</p>
+                </div>
+                <div class="man_plus_major_events-8">
+                    <p class="man_plus_major_events-text">Мобильный Ситцентр построен на базе автобуса MAN. В его салоне размещены рабочие места для специалистов, зал совещаний, системы связи и проч. Он полностью автономен, и может работать как во время стоянки, так и в движении.</p>
+                    <p class="man_plus_major_events-text">Когда в городе проходят крупные мероприятия, и нужна максимальная оперативность, на месте работает мобильный Ситуационный центр. Полный аналог стационарного — только на колесах.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="help_desk">
+        <div class="container_main">
+            <div class="help_desk_grid-wrapper">
+                <div class="help_desk-1">
+                    <h1 class="help_desk-title title">служба помощи</h1>
+                </div>
+                <div class="parkon-2">
+                    <p class="parkon_title">110 автомобилей на базе мобильных комплексов фотовидеофиксации (так называемых «парконов»).</p>
+                    <div class="parkon_descr">
+                        <p class="parkon_text">ЦОДД обновил свой парк и запустил дополнительную Службу помощи водителям.</p>
+                        <p class="parkon_text">В машинах установили камеры с нейросетью. Они работают и как «умный регистратор» (распознают в потоке авто в розыске), и как помощники водителя (следят за усталостью)</p>
+                    </div>
+                </div>
+                <div class="driver-3">
+                    <p class="driver_text">Еще водители Службы мониторят состояние дорожной инфраструктуры, о неполадках сообщают в ЦОДД.</p>
+                </div>
+                <div class="equipment-4">
+                    <div class="text">Каждый экипаж оборудован всем необходимым для помощи:</div>
+                    <div class="skill-1">
+<!--                        <img src="" alt="" class="skill_img">-->
+                        <p class="skill_text">буксировочными тросами</p>
+                    </div>
+                    <div class="skill-2">
+<!--                        <img src="" alt="" class="skill_img">-->
+                        <p class="skill_text">пусковыми устройствами</p>
+                    </div>
+                    <div class="skill-3">
+<!--                        <img src="" alt="" class="skill_img">-->
+                        <p class="skill_text">большими огнетушителями</p>
+                    </div>
+                    <div class="skill-4">
+<!--                        <img src="" alt="" class="skill_img">-->
+                        <p class="skill_text">бланками европротокола</p>
+                    </div>
+                    <div class="skill-5">
+<!--                        <img src="" alt="" class="skill_img">-->
+                        <p class="skill_text">жезлами, чтобы вручную регулировать движение</p>
+                    </div>
+                    <div class="skill-6">
+<!--                        <img src="" alt="" class="skill_img">-->
+                        <p class="skill_text">антисептиками, перевязочными материалами</p>
+                    </div>
+                    <div class="skill-7">
+<!--                        <img src="" alt="" class="skill_img">-->
+                        <p class="skill_text">чистой водой</p>
+                    </div>
+                    <div class="skill-8">
+<!--                        <img src="" alt="" class="skill_img">-->
+                        <p class="skill_text">конусами</p>
+                    </div>
+                    <div class="skill-9">
+<!--                        <img src="" alt="" class="skill_img">-->
+                        <p class="skill_text">домкратами</p>
+                    </div>
+                    <div class="skill-10">
+<!--                        <img src="" alt="" class="skill_img">-->
+                        <p class="skill_text">расширенной аптечкой со спасательными покрывалами</p>
+                    </div>
+                </div>
+                <div class="slide-5">
+                    <div class="traffic_patrol-card slid">
+                        <div class="slid_img"></div>
+                        <div class="slid_info">
+                            <div class="slid_info-desc">
+                                <p class="slid_info-title">Дорожный патруль ЦОДД</p>
+                                <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
+                            </div>
+                            <div class="slid_info-link">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                    <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
+                                        <rect width="18" height="18" fill="#D9D9D9"/>
+                                    </mask>
+                                    <g mask="url(#mask0_1137_313)">
+                                        <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
+                                    </g>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide-6">
+                    <div class="traffic_patrol-card slid">
+                        <div class="slid_img"></div>
+                        <div class="slid_info">
+                            <div class="slid_info-desc">
+                                <p class="slid_info-title">Дорожный патруль ЦОДД</p>
+                                <p class="slid_info-text">Volkswagen Amarok – 57 автомобилей</p>
+                            </div>
+                            <div class="slid_info-link">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                    <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
+                                        <rect width="18" height="18" fill="#D9D9D9"/>
+                                    </mask>
+                                    <g mask="url(#mask0_1137_313)">
+                                        <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
+                                    </g>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
