add border triangls

--- a/src/index.html
+++ b/src/index.html
@@ -176,44 +176,64 @@
                 <div class="equipment-4">
                     <div class="text">Каждый экипаж оборудован всем необходимым для помощи:</div>
                     <div class="skill-1">
-<!--                        <img src="" alt="" class="skill_img">-->
-                        <p class="skill_text">буксировочными тросами</p>
+                        <div class="skill_content">
+                            <img src="./img/layout/pages/main/skill/skill-1.svg" alt="буксировочный трос" class="skill_img">
+                            <p class="skill_text">буксировочными тросами</p>
+                        </div>
                     </div>
                     <div class="skill-2">
-<!--                        <img src="" alt="" class="skill_img">-->
-                        <p class="skill_text">пусковыми устройствами</p>
+                        <div class="skill_content">
+                            <img src="./img/layout/pages/main/skill/skill-2.svg" alt="пусковое устройство" class="skill_img">
+                            <p class="skill_text">пусковыми устройствами</p>
+                        </div>
                     </div>
                     <div class="skill-3">
-<!--                        <img src="" alt="" class="skill_img">-->
-                        <p class="skill_text">большими огнетушителями</p>
+                        <div class="skill_content">
+                            <img src="./img/layout/pages/main/skill/skill-3.svg" alt="огнетушитель" class="skill_img">
+                            <p class="skill_text">большими огнетушителями</p>
+                        </div>
                     </div>
                     <div class="skill-4">
-<!--                        <img src="" alt="" class="skill_img">-->
-                        <p class="skill_text">бланками европротокола</p>
+                        <div class="skill_content">
+                            <img src="./img/layout/pages/main/skill/skill-4.svg" alt="бланк европротокола" class="skill_img">
+                            <p class="skill_text">бланками европротокола</p>
+                        </div>
                     </div>
                     <div class="skill-5">
-<!--                        <img src="" alt="" class="skill_img">-->
-                        <p class="skill_text">жезлами, чтобы вручную регулировать движение</p>
+                        <div class="skill_content">
+                            <img src="./img/layout/pages/main/skill/skill-5.svg" alt="жезл" class="skill_img">
+                            <p class="skill_text">жезлами, чтобы вручную регулировать движение</p>
+                        </div>
                     </div>
                     <div class="skill-6">
-<!--                        <img src="" alt="" class="skill_img">-->
-                        <p class="skill_text">антисептиками, перевязочными материалами</p>
+                        <div class="skill_content">
+                            <img src="./img/layout/pages/main/skill/skill-6.svg" alt="антисептик" class="skill_img">
+                            <p class="skill_text">антисептиками, перевязочными материалами</p>
+                        </div>
                     </div>
                     <div class="skill-7">
-<!--                        <img src="" alt="" class="skill_img">-->
-                        <p class="skill_text">чистой водой</p>
+                        <div class="skill_content">
+                            <img src="./img/layout/pages/main/skill/skill-7.svg" alt="чистая вода" class="skill_img">
+                            <p class="skill_text">чистой водой</p>
+                        </div>
                     </div>
                     <div class="skill-8">
-<!--                        <img src="" alt="" class="skill_img">-->
-                        <p class="skill_text">конусами</p>
+                        <div class="skill_content">
+                            <img src="./img/layout/pages/main/skill/skill-8.svg" alt="конус" class="skill_img">
+                            <p class="skill_text">конусами</p>
+                        </div>
                     </div>
                     <div class="skill-9">
-<!--                        <img src="" alt="" class="skill_img">-->
-                        <p class="skill_text">домкратами</p>
+                        <div class="skill_content">
+                            <img src="./img/layout/pages/main/skill/skill-9.svg" alt="домкрат" class="skill_img">
+                            <p class="skill_text">домкратами</p>
+                        </div>
                     </div>
                     <div class="skill-10">
-<!--                        <img src="" alt="" class="skill_img">-->
-                        <p class="skill_text">расширенной аптечкой со спасательными покрывалами</p>
+                        <div class="skill_content">
+                            <img src="./img/layout/pages/main/skill/skill-10.svg" alt="аптечка" class="skill_img">
+                            <p class="skill_text">расширенной аптечкой со спасательными покрывалами</p>
+                        </div>
                     </div>
                 </div>
                 <div class="slide-5">
