--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -182,7 +182,7 @@
                                         <div class="tech_spec__outfit-img">
                                             <img src="../img/layout/outfit/outfit_8.svg" alt="Телескопическая лестница">
                                         </div>
-                                        <span class="tech_spec__outfit-text">Телескопическая лестница</span>
+                                        <span class="tech_spec__outfit-text">Cкладная лестница</span>
                                     </li>
                                     <li class="tech_spec__outfit-item">
                                         <div class="tech_spec__outfit-img">
