menu + transition iventar

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,60 @@
         </div>
     </header>
 
+    <div class="menu">
+        <div class="container_main">
+            <div class="menu__logo">
+                <img class="menu__logo-img" src="./img/layout/header_logo.svg" alt="logo">
+                <p class="menu__logo-text">Гараж ЦОДД</p>
+            </div>
+            <nav class="menu_navigation">
+                <ul class="menu_navigation-list">
+                    <li class="menu_navigation-item">
+                        <div class="menu_wrapper_img">
+                            <img src="./img/layout/pages/main/menu_icon/police.svg" alt="дорожный патруль ЦОДД" class="menu_nav-img">
+                        </div>
+                        <a class="menu_navigation-link" href="#">дорожный патруль ЦОДД</a>
+                    </li>
+                    <li class="menu_navigation-item">
+                        <div class="menu_wrapper_img">
+                            <img src="./img/layout/pages/main/menu_icon/bus.svg" alt="Мобильный ситуационный центр" class="menu_nav-img">
+                        </div>
+                        <a class="menu_navigation-link" href="#">Мобильный ситуационный центр</a>
+                    </li>
+                    <li class="menu_navigation-item">
+                        <div class="menu_wrapper_img">
+                            <img src="./img/layout/pages/main/menu_icon/boat.svg" alt="водный патруль" class="menu_nav-img">
+                        </div>
+                        <a class="menu_navigation-link" href="#">водный патруль</a>
+                    </li>
+                    <li class="menu_navigation-item">
+                        <div class="menu_wrapper_img">
+                            <img src="./img/layout/pages/main/menu_icon/bicycle.svg" alt="велопатруль" class="menu_nav-img">
+                        </div>
+                        <a class="menu_navigation-link" href="#">велопатруль</a>
+                    </li>
+                    <li class="menu_navigation-item">
+                        <div class="menu_wrapper_img">
+                            <img src="./img/layout/pages/main/menu_icon/firstaid.svg" alt="Служба помощи" class="menu_nav-img">
+                        </div>
+                        <a class="menu_navigation-link" href="#">Служба помощи</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="menu-media">
+                <a class="media-wrapper" href="#">
+                    <img src="./img/layout/pages/main/footer/media_vk.svg" alt="vk">
+                </a>
+                <a class="media-wrapper" href="#">
+                    <img src="./img/layout/pages/main/footer/media_telegram.svg" alt="telegram">
+                </a>
+                <a class="media-wrapper" href="#">
+                    <img src="./img/layout/pages/main/footer/media_tel.svg" alt="Телефон">
+                </a>
+            </div>
+        </div>
+    </div>
+
     <section class="main">
         <div class="container_main">
             <div class="main_bg">
