--- a/src/index.html
+++ b/src/index.html
@@ -39,31 +39,31 @@
                         <div class="menu_wrapper_img">
                             <img src="./img/layout/pages/main/menu_icon/police.svg" alt="дорожный патруль ЦОДД" class="menu_nav-img">
                         </div>
-                        <a class="menu_navigation-link" href="#">дорожный патруль ЦОДД</a>
+                        <a class="menu_navigation-link" href="#traffic_patrol">дорожный патруль ЦОДД</a>
                     </li>
                     <li class="menu_navigation-item">
                         <div class="menu_wrapper_img">
                             <img src="./img/layout/pages/main/menu_icon/bus.svg" alt="Мобильный ситуационный центр" class="menu_nav-img">
                         </div>
-                        <a class="menu_navigation-link" href="#">Мобильный ситуационный центр</a>
+                        <a class="menu_navigation-link" href="#situation_centre">Мобильный ситуационный центр</a>
                     </li>
                     <li class="menu_navigation-item">
                         <div class="menu_wrapper_img">
                             <img src="./img/layout/pages/main/menu_icon/boat.svg" alt="водный патруль" class="menu_nav-img">
                         </div>
-                        <a class="menu_navigation-link" href="#">водный патруль</a>
+                        <a class="menu_navigation-link" href="#situation_centre">водный патруль</a>
                     </li>
                     <li class="menu_navigation-item">
                         <div class="menu_wrapper_img">
                             <img src="./img/layout/pages/main/menu_icon/bicycle.svg" alt="велопатруль" class="menu_nav-img">
                         </div>
-                        <a class="menu_navigation-link" href="#">велопатруль</a>
+                        <a class="menu_navigation-link" href="#situation_centre">велопатруль</a>
                     </li>
                     <li class="menu_navigation-item">
                         <div class="menu_wrapper_img">
                             <img src="./img/layout/pages/main/menu_icon/firstaid.svg" alt="Служба помощи" class="menu_nav-img">
                         </div>
-                        <a class="menu_navigation-link" href="#">Служба помощи</a>
+                        <a class="menu_navigation-link" href="#help_desk">Служба помощи</a>
                     </li>
                 </ul>
             </nav>
@@ -108,7 +108,7 @@
         <div class="container_main"></div>
     </div>
 
-    <section class="traffic_patrol">
+    <section class="traffic_patrol" id="traffic_patrol">
         <div class="container_main">
             <div class="traffic_patrol_grid-wrapper">
                 <div class="traffic_patrol-1">
@@ -253,7 +253,7 @@
         </div>
     </section>
 
-    <section class="situation_centre">
+    <section class="situation_centre" id="situation_centre">
         <div class="container_main">
             <div class="situation_centre_grid-wrapper">
                 <div class="situation-1">
@@ -332,7 +332,7 @@
         </div>
     </section>
 
-    <section class="help_desk">
+    <section class="help_desk" id="help_desk">
         <div class="container_main">
             <div class="help_desk_grid-wrapper">
                 <div class="help_desk-1">
